# Copyright (C) 2023 Felix Huettner
#
# This file is part of DTRD.
#
# DTRD is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# DTRD is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[workspace]

members = [
    "bp7",
    "cli",
    "client",
    "dtrd",
    "tcpcl",
    "replistore"
]

resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"
cast_possible_truncation = "allow" # this triggers too often between u64 and usize, yes this will cause bugs on 32bit systems.
assigning_clones = "allow"
fn_params_excessive_bools = "allow"
