[package]
name = "bp7"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_repr = "0.1"
bitflags = "1.2.1"
chrono = "0.4"
binascii = "0.1.4"
num_enum = "0.5.3"