[package]
name = "dtrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp7 = {path = "../bp7"}
tcpcl = {path = "../tcpcl"}
log = "0.4"
tonic = "0.5.2"
prost = "0.8"
tokio = { version = "1.28.0", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
futures-util = "0.3.16"
env_logger = "0.10.0"
openssl = "0.10.38"
uuid = {version = "1.3.1", features = ["v4"]}
console-subscriber = "0.1.6"
actix = "0.13.0"
actix-rt = "2.8.0"
async-stream = "0.3.3"

[build-dependencies]
tonic-build = "0.5.2"
