# Copyright (C) 2023 Felix Huettner
#
# This file is part of DTRD.
#
# DTRD is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# DTRD is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "dtrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp7 = {path = "../bp7"}
tcpcl = {path = "../tcpcl"}
log = "0.4.21"
tonic = "0.11.0"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
futures-util = "0.3.30"
env_logger = "0.11.3"
openssl = {version = "0.10.64", features = ["vendored"]}
uuid = {version = "1.8.0", features = ["v4"]}
console-subscriber = "0.2.0"
actix = "0.13.3"
actix-rt = "2.9.0"
async-stream = "0.3.5"
url = "2.5.0"

[build-dependencies]
tonic-build = "0.11.0"
