[package]
name = "replistore"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4"
env_logger = "0.10.0"
prost = "0.12.1"
dtrd_client = {path = "../client"}
tokio = { version = "1.34.0", features = ["full", "tracing"] }
futures-util = "0.3.28"
s3s = "0.8.0"
hyper = "0.14.27"
anyhow = "1.0.75"
async-trait = "0.1.74"
tokio-util = { version = "0.7.10", features = ["full"] }
bytes = "1.5.0"
time = "0.3.30"
md-5 = "0.10.6"
hex = "0.4.3"
sha2 = "0.10.8"
actix = "0.13.1"
actix-rt = "2.9.0"
console-subscriber = "0.2.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
futures = "0.3.30"

[build-dependencies]
prost-build = { version = "0.12.1" }
