# Copyright (C) 2023 Felix Huettner
#
# This file is part of DTRD.
#
# DTRD is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# DTRD is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "replistore"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
log = "0.4"
env_logger = "0.11.0"
prost = "0.14.1"
dtrd_client = {path = "../client"}
tokio = { version = "1.37.0", features = ["full", "tracing"] }
futures-util = "0.3.28"
s3s = "0.11.0"
hyper-util = { version = "0.1.6", features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
anyhow = "1.0.75"
async-trait = "0.1.74"
tokio-util = { version = "0.7.11", features = ["full"] }
bytes = "1.5.0"
time = "0.3.30"
md-5 = "0.10.6"
hex = "0.4.3"
sha2 = "0.10.8"
actix = "0.13.1"
actix-rt = "2.9.0"
console-subscriber = "0.4.0"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.19"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
futures = "0.3.30"
uuid = {version = "1.8.0", features = ["v4"]}
rocksdb = "0.24.0"
prost-types = "0.14"

[build-dependencies]
tonic-prost-build = "0.14.1"
prost-build = "0.14.1"

[lints]
workspace = true
