[package]
name = "tcpcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
tokio = { version = "1.10.0", features = ["fs", "io-util", "net", "macros", "sync", "rt", "time"] }
tokio-openssl = "0.6.3"
openssl = "0.10.38"
log = "0.4"
env_logger = "0.8.4"
num_enum = "0.5.4"