# Copyright (C) 2023 Felix Huettner
#
# This file is part of DTRD.
#
# DTRD is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# DTRD is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "tcpcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
tokio = { version = "1.34.0", features = ["fs", "io-util", "net", "macros", "sync", "rt", "time"] }
tokio-openssl = "0.6.3"
openssl = {version = "0.10.59", features = ["vendored"]}
log = "0.4"
num_enum = "0.7.1"
x509-parser = "0.15.1"
tokio-util = {version = "0.7.10", features = ["codec"]}
bytes = "1.5.0"
futures-util = {version = "0.3.29", features = ["sink"]}
url = "2.4.1"
