# Copyright (C) 2023 Felix Huettner
#
# This file is part of DTRD.
#
# DTRD is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# DTRD is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
libc = "0.2"
dtrd_client = {path = "../client"}
dtrd = {path = "../dtrd"}
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs"] }
